terraform/security_group.tf
# Define the security group for public subnet
resource "aws_security_group" "selene_sg" {
  name = "${var.public_sg_name}"
  description = "Create security group for the public subnet"

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks =  ["0.0.0.0/0"]
  }

  tags {
    Name = "${var.public_sg_name}"
  }
}
